--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 	
   	<body>
-  	  <div class="container-fluid">
+  	    <div class="container-fluid">
   		    <div class="row">
   			  <div class="col-xs-12">
   			    <h1><span class="glyphicon glyphicon-eye-open" style="color:red"></span> Mobility Gateway EAS2.0</h1>
@@ -25,20 +25,23 @@
   			  	<div class="col-xs-12">
 	    			<ul class="nav nav-tabs">
 	              		<li role="presentation" class="active"><a href="#">ASG Portal</a></li>
-	              		<li role="presentation"><a href="#">Demo</a></li>
-	              		<li role="presentation"><a href="#">Design</a></li>
+	              		<li role="presentation"><a href="#/demo.html">Demo</a></li>
+	              		<li role="presentation"><a href="#/design.html">Design</a></li>
 	            	</ul>
           		</div>
         	</div>
         
         	<div class="row">
           		<div class="col-xs-3">
-            		<!-- <ul class="nav nav-pills nav-stacked">
-            		               			<li role="presentation" class="active"><a href="#">Function Metadata</a></li>
-            		              			<li role="presentation"><a href="#">System Health</a></li>
-            		                   	</ul> -->
+          		<p>Number of Functions : 10</p>
+          		<p>Number of Disabled Functions : 0</p>
+          		<p>Number of Components : 10</p>
+          		<p>Number of Plugins : 30</p>
+          		<p>Number of Servers : 30</p>
+          		<p>Number of Active Servers : 1</p>
+          		<input type="text" class="form-control" aria-label="recover" placeholder="Server ID">
+          		<button type="submit" class="btn btn-default">Recover</button>
           		</div>
-        
         		<div class="col-xs-9">
 					<table class="table table-striped table-hover">
 						<tr>
@@ -49,9 +52,26 @@
 							<th>Wait Time</th>
 							<th>Time out</th>
 						</tr>	
+						<tr>
+							<th>134</th>
+							<th>Identify</th>
+							<th>True</th>
+							<th>Async</th>
+							<th>10</th>
+							<th>15</th>
+						</tr>	
+						<tr>
+							<th>103</th>
+							<th>Sign On</th>
+							<th>True</th>
+							<th>Async</th>
+							<th>10</th>
+							<th>10</th>
+						</tr>	
 					</table>
 				</div>
 			</div>
-        </div>
+			
+		</div>
   	</body>
 	</html>
